--- a/papers/PINN_PB_paper/simulations/input_files/OCC/OCC_WA_TF_FF_SI_SO.yaml
+++ b/papers/PINN_PB_paper/simulations/input_files/OCC/OCC_WA_TF_FF_SI_SO.yaml
@@ -27,8 +27,13 @@ mesh_properties:
 # Sampling method
 sample_method: random_sample
 
-# Frequency of solvation energy calculation
-G_solve_iter: 1
+# Frequency of additional indicators calculation
+Indicators_iter: 1
+
+# Additional indicators
+Indicators:
+    - G_solv: true
+    - L2_error_phi: 'Spherical_Harmonics'
 
 # Losses to add, and initial weights
 losses:
@@ -82,17 +87,8 @@ lr:
     decay_rate: 0.9
     staircase: true
 
-optimizer2: L-BFGS-B
-options_optimizer2:
-    maxiter: 100
-    maxfun: 5000
-    maxcor: 50
-    maxls: 50
-    ftol: 0.0000000000002
     
 # Solve parameters
 N_iters: 20000
-N_steps_2: 0
-
 
 iters_save_model: 20000
